--- a/webmovies/templates/webmovies/movies.html
+++ b/webmovies/templates/webmovies/movies.html
@@ -1,7 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title></title>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<link rel="stylesheet" type="text/css" href="{% static 'webmovies/main.css' %}">
+
+		<title> Filmweb </title>
 	</head>
 	<body>
 
