--- a/webmovies/templates/webmovies/movie_detail.html
+++ b/webmovies/templates/webmovies/movie_detail.html
@@ -11,15 +11,9 @@
 	</head>
 	<body>
 
-		<form method="post" enctype="mu">
-			{% csrf_token %}
-			{{ form }}
+		<h2>  {{ object.title }}  </h2>
 
-			<button type="submit">Submit</button>
-
-
-		</form>
-			}
+		<p> {{ object.descript}} </p>
 
 	</body>
 </html>
