--- a/webmovies/templates/webmovies/movies.html
+++ b/webmovies/templates/webmovies/movies.html
@@ -20,7 +20,7 @@
 			<h1> FILMWEB TM </h1>
 			{% for movie in movies %}
 
-				<h2> {{ movie.title }} </h2>
+				<h2> <a href="{% url 'web-det' movie.id %}"> {{ movie.title }} </a> </h2>
 
 				<p> {{ movie.descript}} </p>
 
